# SDAP

./: .gitignore  CLAUDE.md  LICENSE  README.md
examples/cross-provider-handoff/: README.md  example.py
examples/delegation-chain/: README.md  example.py
examples/medical-records/: README.md  example.py
sdap-python/: pyproject.toml
sdap-python/src/sdap/: __init__.py
sdap-python/src/sdap/a2a/: __init__.py  agent_card.py  client.py  middleware.py
sdap-python/src/sdap/audit/: __init__.py  chain.py  entries.py
sdap-python/src/sdap/crypto/: __init__.py  canonicalize.py  encryption.py  hashing.py  key_exchange.py  signing.py
sdap-python/src/sdap/delegation/: __init__.py  chain.py  tokens.py
sdap-python/src/sdap/handshake/: __init__.py  protocol.py  session_store.py
sdap-python/src/sdap/identity/: __init__.py  attestation.py  did.py  keys.py
sdap-python/tests/: test_a2a.py  test_audit.py  test_crypto.py  test_delegation.py  test_handshake.py  test_identity.py  test_integration.py
sdap-typescript/: package-lock.json  package.json  vitest.config.ts
sdap-typescript/src/: index.ts
sdap-typescript/tests/: test_audit.test.ts  test_crypto.test.ts  test_delegation.test.ts  test_handshake.test.ts  test_identity.test.ts  test_integration.test.ts
spec/: did-method-sdap.md  openapi.yaml  sdap-protocol-v1.md
spec/schemas/: audit-entry.json  delegation-token.json  did-document.json  error.json  handshake-accept.json  handshake-confirm.json  handshake-init.json  session-envelope.json
tests/interop/: README.md  (+6 more)
whitepaper/: sdap-whitepaper.md
(+22 files in other folders)
